<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_gtr_super_light_grey">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_settings_padding_bottom">

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldVerticalPicker
                android:id="@+id/settingsProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingsTitlePicker="@string/LNG_LOGIN_LOGIN_TITLE"/>

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                android:id="@+id/settingsCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:settingsTitlePicker="@string/LNG_CURRENCY"/>

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                android:id="@+id/settingsLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingsTitlePicker="@string/LNG_LANGUAGE"/>

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldSwitch
                android:id="@+id/settingsDistanceUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingsTitleSwitch="@string/LNG_DISTANCE_IN_MILES"/>

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldSwitch
                android:id="@+id/settingsEmailNotif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingsTitleSwitch="@string/LNG_EMAIL_NOTIFICATIONS"
                app:settingsShowDivider="false"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutAboutApp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_field_height"
                android:background="@color/colorWhite"
                android:layout_marginTop="@dimen/activity_settings_about_app_margin_top"
                android:paddingStart="@dimen/activity_settings_about_app_horizontal_padding"
                android:paddingEnd="@dimen/activity_settings_about_app_horizontal_padding"
                android:paddingTop="@dimen/activity_settings_about_app_vertical_padding"
                android:paddingBottom="@dimen/activity_settings_about_app_vertical_padding">

                <TextView
                    android:id="@+id/titleAboutApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/versionApp"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/sf_font_pro_text_regular_grey"
                    android:textSize="@dimen/activity_settings_about_title_text_size"
                    android:text="@string/LNG_ABOUT_APPLICATION"/>

                <TextView
                    android:id="@+id/versionApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleAboutApp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/sf_font_pro_text_regular_black"
                    android:textSize="@dimen/settings_field_text_size"
                    tools:text="Version 2.7.0 (585)"/>

                <ImageView
                    android:id="@+id/shareBtn"
                    android:layout_width="@dimen/activity_settings_share_btn_size"
                    android:layout_height="@dimen/activity_settings_share_btn_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_menu_share"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutDebugSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_settings_layout_debug_margin_top"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_settings_debug_title_margin_start"
                    android:layout_marginBottom="@dimen/activity_settings_debug_title_margin_bottom"
                    android:textSize="@dimen/activity_settings_debug_title_text_size"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:textColor="@color/color_gtr_grey"
                    android:textAllCaps="true"
                    android:text="@string/debug"/>

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/settingsEndpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/endpoint" />

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/settingsResetOnboarding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/reset_onboarding" />

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/settingsResetRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/reset_rate" />

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/settingsClearAccessToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/clear_access_token" />

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/settingsResetNewDriverAppDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/reset_new_driver_app_dialog" />

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldSwitch
                    android:id="@+id/settingsPaymentRequestWithoutDelay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitleSwitch="@string/payment_request_without_delay"/>

                <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                    android:id="@+id/forceCrash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingsTitlePicker="@string/force_crash"
                    app:settingsPickerDivider="false"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/currenciesFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
