<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_order_selector"
        android:contentDescription="@string/LNG_MENU_ORDER"
        android:title="@string/LNG_MENU_ORDER" />
    <item
        android:id="@+id/nav_trips"
        android:icon="@drawable/ic_trips_selector"
        android:contentDescription="@string/LNG_MENU_TRIPS"
        android:title="@string/LNG_MENU_TRIPS" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_selector"
        android:contentDescription="@string/LNG_MENU_HELP"
        android:title="@string/LNG_MENU_HELP" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_selector"
        android:contentDescription="@string/LNG_MENU_SETTINGS"
        android:title="@string/LNG_MENU_SETTINGS" />
</menu>
